[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
name = "importnb"
description = "import jupyter notebooks as python modules and scripts."
readme = "README.md"
keywords = []
license = "BSD-3-Clause AND MPL-2.0"
license-files = {paths = ["LICENSE", "LICENSE-MPL-2.0"]}
authors = [{name = "tonyfast", email = "tony.fast@gmail.com"}]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "License :: OSI Approved :: BSD License",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]
dynamic = ["version"] # uses hatch-vcs
dependencies = ['importlib-metadata>=4.8.3; python_version < "3.10"']

[project.optional-dependencies]
interactive = ["ipython"]
tasks = ["doit", "tomli"]
test = ["doit", "pytest-cov", "pytest", "ruamel.yaml", "tomli-w", "tomli"]

[project.urls]
Documentation = "https://github.com/deathbeds/importnb#readme"
Issues = "https://github.com/deathbeds/importnb/issues"
Source = "https://github.com/deathbeds/importnb"

[project.scripts]
importnb = "importnb.__main__:main"
[project.entry-points.importnb]
ipy = "importnb.loader:Notebook"
ipynb = "importnb.loader:Notebook"
json = "importnb.loaders:Json"
py = "importnb.loader:Loader"
toml = "importnb.loaders:Toml"
yaml = "importnb.loaders:Yaml"
yml = "importnb.loaders:Yaml"

[project.entry-points.pytest11]
importnb = "importnb.utils.pytest_importnb"

# hatch ########################################################################
[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
hooks.vcs.version-file = "src/importnb/_version.py"
hooks.custom.dependencies = ["lark"]
targets.sdist.exclude = [
  ".github",
  ".readthedocs.yml",
  "docs/*.png",
  "docs/coverage",
  "lite",
  "pixi.*",
]

[tool.hatch.envs.released]
# test a release on test-pypi
dependencies = ["importnb", "ipython", "pytest", "pytest-cov", "doit", "tomli-w", "ruamel.yaml"]

[tool.hatch.envs.released.scripts]
test = "pytest"

[tool.hatch.envs.released.env-vars]
PIP_INDEX_URL = "https://test.pypi.org/simple/"
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"
PIP_PRE = "1"

# tools in alphabetical order ##################################################
## coverage ####################################################################
[tool.coverage.run]
data_file = "build/.coverage"

[tool.coverage.report]
omit = ["_json_parser.py"]
exclude_lines = [
  """if __name__ == "__main__":""",
  "if _BEAR_:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

## mypy ########################################################################
[tool.coverage.html]
show_contexts = true

[tool.mypy]
cache_dir = "build/.cache/mypy"
exclude = "_json_parser.py"
python_version = "3.9"
show_error_context = true
show_error_code_links = true
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  # core
  "importlib._bootstrap",
  "importlib._bootstrap_external",
  "tomllib",
  # contrib
  "doit",
  "doit.*",
  # test
  "__42",
  "__d42",
  "__ed42",
  "ascript",
  "async_cells",
  "json_data",
  "minified",
  "my_package.*",
  "my_package",
  "toml_data",
  "Untitled42",
  "yaml_data",
]


## pytest ######################################################################
[tool.pytest.ini_options]
cache_dir = "build/.cache/pytest"
addopts = ["-vv", "--tb=long", "--color=yes", "-ppytester"]
filterwarnings = ["error"]
testpaths = ["docs", "src"]

## ruff ########################################################################
[tool.ruff]
target-version = "py39"
preview = true
cache-dir = "build/.cache/ruff"
line-length = 100
extend-include = ["*.ipynb"]
extend-exclude = [".pixi/**", "**/_json_parser.py", "site", "build", "dist", ".github"]

[tool.ruff.lint]
isort.known-first-party = ["importnb"]
ignore = [
  # linter/formatter incompatibility
  "COM812",
  "D203",
  "D213",
  "ISC001",
  # current findings
  "A001",
  "A002",
  "A004",
  "ANN401",
  "ARG001",
  "ARG002",
  "ARG003",
  "B007",
  "B008",
  "B018",
  "C408",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D107",
  "D205",
  "D400",
  "D401",
  "D415",
  "D419",
  "DOC201",
  "DOC402",
  "DOC501",
  "E402",
  "E501",
  "E722",
  "E741",
  "EM101",
  "EM102",
  "F841",
  "FBT001",
  "FBT002",
  "FBT003",
  "FLY002",
  "FURB192",
  "INP001",
  "N801",
  "N802",
  "N806",
  "N813",
  "PYI034",
  "PERF203",
  "PLC0415",
  "PLC2701",
  "PLE1142",
  "PLR0904",
  "PLR0913",
  "PLR2004",
  "PLR6301",
  "PLW0602",
  "PLW1514",
  "PLW3201",
  "PT013",
  "PTH103",
  "PTH123",
  "RET503",
  "RUF005",
  "RUF017",
  "RUF029",
  "S101",
  "S112",
  "S404",
  "S603",
  "SIM102",
  "SIM105",
  "SLF001",
  "T201",
  "TRY003",
  "TRY201",
  "TRY300",
  "TRY301",
  "W391",
  "YTT204",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test_cli.py" = ["D415", "D207", "D208"]
"Untitled42.ipynb" = ["ANN001", "ANN201"]
