[metadata]
name = importnb
description = Import Jupyter (ne IPython) notebooks into tests and scripts.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/importnb
author = deathbeds
author_email = tony.fast@gmail.com
keywords = 
classifiers = 
    Development Status :: 4 - Beta
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
package_dir = 
	=src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
doc = 
	jupyter-book
test = 
	pytest
	nbval
	nbformat

[options.entry_points]
pytest11 = 
	importnb = importnb.utils.pytest_importnb
console_scripts = 
	importnb = importnb.__main__:main